[package]
name = "commoncrypto-sys"
version = "0.1.0"
authors = ["Mark Lee"]
description = "FFI bindings to Mac OS X's CommonCrypto library"
documentation = "https://malept.github.io/commoncrypto-sys/"
repository = "https://github.com/malept/commoncrypto-sys"
readme = "README.md"
keywords = ["crypto", "hash", "digest"]
license = "MIT"
exclude = [
    ".*.yml",
    "ci/*"
]

[features]
lint = ["clippy"]

[dependencies]
libc = "0.2"

clippy = { version = "0.0", optional = true }
