[package]
name = "commoncrypto-sys"
version = "0.2.0"
authors = ["Mark Lee"]
description = "FFI bindings to Mac OS X's CommonCrypto library"
documentation = "https://docs.rs/commoncrypto-sys"
repository = "https://github.com/malept/rust-commoncrypto"
keywords = ["crypto", "hash", "digest", "osx", "commoncrypto"]
categories = ["cryptography", "external-ffi-bindings", "os::macos-apis"]
license = "MIT"

[badges]
travis-ci = { repository = "malept/rust-commoncrypto" }

[dev-dependencies]
hex = "0.3"
