[package]
name = "commoncrypto"
version = "0.1.0"
authors = ["Mark Lee"]
documentation = "https://docs.rs/commoncrypto"
repository = "https://github.com/malept/rust-commoncrypto"
readme = "README.md"
keywords = ["crypto", "hash", "digest", "osx", "commoncrypto"]
license = "MIT"

[features]
lint = ["clippy"]

[dependencies]
commoncrypto-sys = { version = "0.1.0", path = "../commoncrypto-sys" }
hex = "0.2"

clippy = { version = "0.0", optional = true }
