[package]
name = "commoncrypto"
version = "0.2.0"
authors = ["Mark Lee"]
description = "Idiomatic Rust wrappers for Mac OS X's CommonCrypto library"
documentation = "https://docs.rs/commoncrypto"
repository = "https://github.com/malept/rust-commoncrypto"
keywords = ["crypto", "hash", "digest", "osx", "commoncrypto"]
categories = ["cryptography", "api-bindings", "os::macos-apis"]
license = "MIT"

[features]
# default = ["ios-compat"]

[badges]
travis-ci = { repository = "malept/rust-commoncrypto" }

[dependencies]
commoncrypto-sys = { version = "0.2.0", path = "../commoncrypto-sys" }

[dev-dependencies]
hex = "0.3"
